src/pages/index.styles.scss
*{
    font-family: 'Open Sans', sans-serif;
}
.opener{
    font-size: 2.5rem;
}

.subtitle {
    margin-top: -10px;
    padding-bottom: 1.3rem;
}

.folio-title {
  //font-weight: bold;
  font-family: 'Anonymous Pro', monospace;
  display: inline;
  background-color: #C3F8FF;
  font-size: 1.2rem;
  margin: 0 0.5em 0.5em 0;
}

.folio-title:hover {
  background-color: transparent;
}


.folio-title-sub {
  //font-weight: bold;
  display: inline;
  padding-right: 0.4rem;
  font-size: 1rem;
  padding-bottom: 0.5rem;
}

.folio-title-sub:after {
  content: "[+]";
  margin-left: 4px;
}

.folio-title-sub.active:after {
  content: "[-]";
}


.container {

  padding: 20rem 20rem;
}

input {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.tabs {
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 4px -2px rgba(0,0,0,0.5);
  
}

.tab {
  width: 100%;
  color: black;
  overflow: hidden;
  font-size: .9rem;
  img{
    max-width:300px;
}
  &-label {
    display: flex;
    
    &:hover {
        background-color: transparent;
    }
    cursor: pointer;
    /* Icon */
    &::after {
      width: 1em;
      height: 1em;
      text-align: center;
      transition: all .75s;
    }
  }
  &-label-sub {
    display: flex;
    
    &:hover {
        color: cornflowerblue;
    }
    cursor: pointer;
    /* Icon */
    &::after {
      width: 1em;
      height: 1em;
      text-align: center;
      transition: all .75s;
    }
  }
  &-content {
    max-height: 0;
    background-color: transparent;
    transition: all .35s;
  }
  &-content-sub {
    max-height: 0;
    background-color: transparent;
    transition: all .35s;
  }
  &-close {
    display: flex;
    justify-content: flex-end;
    font-size: 0.75em;
    cursor: pointer;
  
  }
}

// :checked
input:checked {
  + .tab-label {
    &::after {
      transform: rotate(90deg);
    }
  }
  + .tab-label-sub {
    &::after {
      transform: rotate(90deg);
    }
  }
  ~ .tab-content {
    max-height: 100vh;
    padding: 0 1em 1em 1em;
    width:90%;
    font-size: .9rem;
  }
  ~ .tab-content-sub {
    max-height: 100vh;
    padding: 0em 1em 1em 1em;
    width:90%;
    font-size: .9rem;
  }
}

.repolinks {
    a { 
    display: block;
    margin-top: 10px;
    text-decoration: none;
    &:hover {
        color: cornflowerblue;
    }
    &:visited {
        text-decoration: none;
    }
}
}


@media(max-width:800px) {

    .folio-title {
        
        font-size: 0.9rem;
      }

      .folio-sinopsis {
        font-size: 0.9rem;
      }
      
    
}



@media(max-width:500px) {

    .folio-title {
        
        font-size: 0.75rem;
        padding-right: 1rem;
      }

      .folio-sinopsis {
        font-size: 0.75rem;
      }
      
    
}

